# rust_programming

Module_1/: 01_mem_safe  01_mem_safe.rs  02_mem_safe.rs  03_mem_unsafe  03_mem_unsafe.rs  04_mem_safe_stack.rs  05_data_race  05_data_race.rs  06_data_race_unsafe  06_data_race_unsafe.rs  07_data_race_safety  07_data_race_safety.rs  08_data_race_safety.rs  block_as_expression  block_as_expression.rs  data_race  data_race.cpp  data_race.rs  data_race_safe  data_race_safe_01.cpp  err  hello  hello.mir  hello.rs  hello.s  if_expression  if_expression.rs  immutable_type_change  immutable_type_change.rs  mem_bug  mem_bug.c  mem_bug2  mem_bug2.c  mem_bug2s  move_semantics_example  move_semantics_example.rs  move_vs_clone  move_vs_clone.rs  out  overflow  (+19 more)
Module_2/: 00_io  00_io.rs  01_if_condition.rs  01a_expressions  01a_expressions.rs  01a_expressions.s  01a_expressions_1.s  01b_shadowing_example  01b_shadowing_example.rs  01b_shadowing_example.s  02_loop.rs  03_loop_with_labels  03_loop_with_labels.rs  04_while_loop  04_while_loop.rs  05_loop_with_if.rs  06_for_loop.rs  07_match  07_match.rs  08_match_with_enums  08_match_with_enums.rs  (+170 more)
Module_5/archives/sample_project/: Cargo.toml
Module_5/multi_threaded_server/: Cargo.toml
Module_5/multi_threaded_server/src/: lib.rs  main.rs
Module_5/multi_threaded_server/src/client/: client.rs
Module_5/multi_threaded_server/src/common/: errors.rs  mod.rs  protocol.rs
Module_5/multi_threaded_server/src/server/: connection_manager.rs  handler.rs  listener.rs  mod.rs
Module_5/multi_threaded_server/tests/: integration_tests.rs
(+390 files in other folders)
