[package]
name = "sample_project"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
incremental = true
panic  = 'unwind'

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
incremental = false
panic  = 'abort'
strip = "symbols"


[dependencies]
